tests/fail/124-fail-as-binary-on-tuple.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct WithAsBinaryOnTuple {
    #[df_derive(as_binary)]
    pair: (Vec<u8>, String),
}

fn main() {}
